--- a/contacto.html
+++ b/contacto.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -29,12 +30,24 @@
                 <div class="flex items-center">
                     <h1 class="text-2xl font-bold text-blue-600">Per-te Uniformes</h1>
                 </div>
-                <div class="hidden md:flex space-x-8">
+                <!-- Enlaces de navegación (Desktop) -->
+                <div class="hidden md:flex space-x-8" id="navbar-links">
                     <a href="index.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Inicio</a>
                     <a href="productos.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Productos</a>
                     <a href="colegios.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Colegios</a>
                     <a href="contacto.html" class="text-blue-600 font-semibold">Contacto</a>
                 </div>
+                <!-- Botón de toggle para móvil -->
+                <button class="md:hidden" id="nav-toggle-btn">
+                    <i class="ph-list text-2xl"></i>
+                </button>
+            </div>
+            <!-- Enlaces de navegación (Móvil) -->
+            <div class="hidden flex-col space-y-4 pb-4 md:hidden" id="mobile-menu">
+                <a href="index.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Inicio</a>
+                <a href="productos.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Productos</a>
+                <a href="colegios.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Colegios</a>
+                <a href="contacto.html" class="text-blue-600 font-semibold">Contacto</a>
             </div>
         </div>
     </nav>
@@ -58,27 +71,42 @@
                 <form id="contactForm" class="space-y-6">
                     <div>
                         <label class="block text-gray-700 mb-2" for="nombre">Nombre completo</label>
-                        <input type="text" id="nombre" name="nombre" 
+                        <input 
+                            type="text" 
+                            id="nombre" 
+                            name="nombre" 
                             class="contact-input w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none"
-                            required>
+                            required
+                        >
                     </div>
                     <div>
                         <label class="block text-gray-700 mb-2" for="email">Correo electrónico</label>
-                        <input type="email" id="email" name="email" 
+                        <input 
+                            type="email" 
+                            id="email" 
+                            name="email" 
                             class="contact-input w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none"
-                            required>
+                            required
+                        >
                     </div>
                     <div>
                         <label class="block text-gray-700 mb-2" for="telefono">Teléfono</label>
-                        <input type="tel" id="telefono" name="telefono" 
+                        <input 
+                            type="tel" 
+                            id="telefono" 
+                            name="telefono" 
                             class="contact-input w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none"
-                            required>
+                            required
+                        >
                     </div>
                     <div>
                         <label class="block text-gray-700 mb-2" for="asunto">Asunto</label>
-                        <select id="asunto" name="asunto" 
+                        <select 
+                            id="asunto" 
+                            name="asunto" 
                             class="contact-input w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none"
-                            required>
+                            required
+                        >
                             <option value="">Selecciona un asunto</option>
                             <option value="consulta">Consulta general</option>
                             <option value="pedido">Realizar pedido</option>
@@ -88,12 +116,18 @@
                     </div>
                     <div>
                         <label class="block text-gray-700 mb-2" for="mensaje">Mensaje</label>
-                        <textarea id="mensaje" name="mensaje" rows="4" 
+                        <textarea 
+                            id="mensaje" 
+                            name="mensaje" 
+                            rows="4" 
                             class="contact-input w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none"
-                            required></textarea>
+                            required
+                        ></textarea>
                     </div>
-                    <button type="submit" 
-                        class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition duration-300">
+                    <button 
+                        type="submit" 
+                        class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition duration-300"
+                    >
                         Enviar mensaje
                     </button>
                 </form>
@@ -159,7 +193,7 @@
                 </div>
                 <div class="bg-white rounded-lg p-6 shadow-md" data-aos="fade-up">
                     <h4 class="font-semibold mb-2">¿Cuánto tiempo tarda la confección?</h4>
-                    <p class="text-gray-600">Los tiempos varían según el tipo de prenda y la cantidad. Consultanos para más detalles.</p>
+                    <p class="text-gray-600">Los tiempos varían según el tipo de prenda y la cantidad. Consúltanos para más detalles.</p>
                 </div>
                 <div class="bg-white rounded-lg p-6 shadow-md" data-aos="fade-up">
                     <h4 class="font-semibold mb-2">¿Realizan envíos?</h4>
@@ -199,9 +233,14 @@
                     <h4 class="text-xl font-bold mb-4">Newsletter</h4>
                     <p class="text-gray-400 mb-4">Suscríbete para recibir novedades y ofertas</p>
                     <div class="flex">
-                        <input type="email" placeholder="Tu email" 
-                            class="px-4 py-2 rounded-l-lg focus:outline-none flex-1">
-                        <button class="bg-blue-600 text-white px-4 py-2 rounded-r-lg hover:bg-blue-700 transition duration-300">
+                        <input 
+                            type="email" 
+                            placeholder="Tu email" 
+                            class="px-4 py-2 rounded-l-lg focus:outline-none flex-1"
+                        >
+                        <button 
+                            class="bg-blue-600 text-white px-4 py-2 rounded-r-lg hover:bg-blue-700 transition duration-300"
+                        >
                             Suscribirse
                         </button>
                     </div>
@@ -219,6 +258,14 @@
             once: true
         });
 
+        // Toggle Mobile Menu
+        const toggleBtn = document.getElementById('nav-toggle-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        toggleBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+
         // Manejo del formulario
         document.getElementById('contactForm').addEventListener('submit', function(e) {
             e.preventDefault();
@@ -228,4 +275,4 @@
         });
     </script>
 </body>
-</html></qodoArtifact>
+</html>
