--- a/contacto.html
+++ b/contacto.html
@@ -37,11 +37,13 @@
                     <a href="colegios.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Colegios</a>
                     <a href="contacto.html" class="text-blue-600 font-semibold">Contacto</a>
                 </div>
-                <!-- Botón de toggle para móvil -->
-                <button class="md:hidden" id="nav-toggle-btn">
-                    <i class="ph-list text-2xl"></i>
-                </button>
-            </div>
+                <!-- Reemplazar el botón actual del menú móvil con esta versión -->
+            <button class="md:hidden flex items-center justify-center w-10 h-10 text-gray-700 hover:text-blue-600 transition duration-300" id="nav-toggle-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </button>
+        </div>
             <!-- Enlaces de navegación (Móvil) -->
             <div class="hidden flex-col space-y-4 pb-4 md:hidden" id="mobile-menu">
                 <a href="index.html" class="text-gray-700 hover:text-blue-600 transition duration-300">Inicio</a>
