--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     <nav class="bg-white shadow-lg fixed w-full z-50">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
-                <!-- Site Logo or Title -->
-                <div class="flex items-center">
+                <!-- Logo + Texto -->
+                <div class="flex items-center space-x-4">
+                    <img src="images/IMG-20250407-WA0026.jpg" alt="Logo Per-te Uniformes" class="h-12 w-auto">
                     <h1 class="text-2xl font-bold text-blue-600">Per-te Uniformes</h1>
                 </div>
 
@@ -67,7 +68,7 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div data-aos="fade-right">
                     <h2 class="text-5xl font-bold mb-6">Tradición y Calidad en Uniformes Escolares</h2>
-                    <p class="text-xl mb-8 text-blue-100">Más de 15 años vistiendo a los estudiantes de nuestra región con orgullo y distinción</p>
+                    <p class="text-xl mb-8 text-blue-100">Más de 10 años vistiendo a los estudiantes de nuestra región con orgullo y distinción</p>
                     <div class="flex space-x-4">
                         <a href="productos.html" class="bg-white text-blue-600 px-8 py-3 rounded-lg font-semibold hover:bg-blue-50 transition duration-300">
                             Ver Catálogo
@@ -78,8 +79,7 @@
                     </div>
                 </div>
                 <div class="hidden md:block" data-aos="fade-left">
-                    <!-- Aquí iría una imagen de un uniforme o estudiantes -->
-                    <div class="bg-blue-400 h-96 rounded-lg shadow-2xl"></div>
+                    <img src="images/IMG-20250407-WA0012.jpg" alt="Uniforme escolar" class="w-full h-96 object-cover rounded-lg shadow-2xl">
                 </div>
             </div>
         </div>
@@ -124,28 +124,29 @@
             <h3 class="text-3xl font-bold text-center mb-12">Nuestros Productos</h3>
             <div class="grid md:grid-cols-4 gap-8">
                 <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition duration-300" data-aos="fade-up">
-                    <div class="bg-gray-200 h-48"></div>
+                    <img src="images/IMG-20250407-WA0013.jpg" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-2">Guardapolvos</h4>
                         <p class="text-gray-600">Confección tradicional y moderna</p>
                     </div>
                 </div>
                 <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition duration-300" data-aos="fade-up" data-aos-delay="100">
-                    <div class="bg-gray-200 h-48"></div>
+                    <img src="images/IMG-20250407-WA0016.jpg" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-2">Remeras</h4>
                         <p class="text-gray-600">Para todos los colegios</p>
                     </div>
                 </div>
-                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition duration-300" data-aos="fade-up" data-aos-delay="200">
-                    <div class="bg-gray-200 h-48"></div>
+                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition duration-300" data-aos="fade-up">
+                    <img src="images/IMG-20250407-WA0020.jpg" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-2">Chambas</h4>
                         <p class="text-gray-600">Diseños institucionales</p>
                     </div>
                 </div>
+                
                 <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition duration-300" data-aos="fade-up" data-aos-delay="300">
-                    <div class="bg-gray-200 h-48"></div>
+                    <img src="images/IMG-20250407-WA0006.jpg" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-2">Camperas</h4>
                         <p class="text-gray-600">Máximo abrigo y calidad</p>
@@ -194,13 +195,13 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <div>
                     <h4 class="text-xl font-bold mb-4">Per-te Uniformes</h4>
-                    <p class="text-gray-400">Tradición en uniformes escolares desde hace más de 15 años.</p>
+                    <p class="text-gray-400">Tradición en uniformes escolares desde hace más de 10 años.</p>
                 </div>
                 <div>
                     <h4 class="text-xl font-bold mb-4">Contacto</h4>
                     <p class="text-gray-400">Teléfono: [Número]</p>
                     <p class="text-gray-400">Email: [Email]</p>
-                    <p class="text-gray-400">Dirección: [Dirección]</p>
+                    <p class="text-gray-400">Dirección: Calle Belgrano y 25 de Mayo, Tilisarao, San Luis</p>
                 </div>
                 <div>
                     <h4 class="text-xl font-bold mb-4">Horarios</h4>
