--- a/contacto.html
+++ b/contacto.html
@@ -150,7 +150,7 @@
                             <i class="ph-phone text-2xl text-blue-600 mr-4"></i>
                             <div>
                                 <p class="font-semibold">Teléfono</p>
-                                <p class="text-gray-600">[Número de teléfono]</p>
+                                <p class="text-gray-600">+54 9 266 4543899</p>
                             </div>
                         </div>
                         <div class="flex items-center">
@@ -170,9 +170,9 @@
                         <div class="flex items-center">
                             <i class="ph-clock text-2xl text-blue-600 mr-4"></i>
                             <div>
-                                <p class="font-semibold">Horario de atención</p>
-                                <p class="text-gray-600">Lunes a Viernes: 9:00 - 18:00</p>
-                                <p class="text-gray-600">Sábados: 9:00 - 13:00</p>
+                                <h4 class="text-xl font-bold mb-4">Horarios</h4>
+                                <p class="text-gray-400">Lunes a Viernes: 10:00 a 12:30 - 18:00 a 20:00</p>
+                                <p class="text-gray-400">Sábados: 10:00 a 12:30</p>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <div>
                     <h4 class="text-xl font-bold mb-4">Per-te Uniformes</h4>
-                    <p class="text-gray-400">Tradición en uniformes escolares desde hace más de 15 años.</p>
+                    <p class="text-gray-400">Tradición en uniformes escolares desde hace más de 10 años.</p>
                 </div>
                 <div>
                     <h4 class="text-xl font-bold mb-4">Redes Sociales</h4>
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center">
-                <p class="text-gray-400">&copy; 2024 Per-te Uniformes. Todos los derechos reservados.</p>
+                <p class="text-gray-400">&copy; 2025 Per-te Uniformes. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
