--- a/index.html
+++ b/index.html
@@ -199,18 +199,26 @@
                 </div>
                 <div>
                     <h4 class="text-xl font-bold mb-4">Contacto</h4>
-                    <p class="text-gray-400">Teléfono: [Número]</p>
+                    <p class="text-gray-400">
+                        <a href="tel:+5492664543899" class="hover:text-blue-400 transition duration-300">
+                            Teléfono: +54 9 266 4543899
+                        </a>
+                    </p>
+                    <p class="text-gray-400">
+                        <a href="tel:+5492664505510" class="hover:text-blue-400 transition duration-300">
+                            Teléfono: +54 9 266 4505510
+                        </a>
                     <p class="text-gray-400">Email: [Email]</p>
                     <p class="text-gray-400">Dirección: Calle Belgrano y 25 de Mayo, Tilisarao, San Luis</p>
                 </div>
                 <div>
                     <h4 class="text-xl font-bold mb-4">Horarios</h4>
-                    <p class="text-gray-400">Lunes a Viernes: 9:00 - 18:00</p>
-                    <p class="text-gray-400">Sábados: 9:00 - 13:00</p>
+                    <p class="text-gray-400">Lunes a Viernes: 10:00 a 12:30 - 18:00 a 20:00</p>
+                    <p class="text-gray-400">Sábados: 10:00 a 12:30</p>
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center">
-                <p class="text-gray-400">&copy; 2024 Per-te Uniformes. Todos los derechos reservados.</p>
+                <p class="text-gray-400">&copy; 2025 Per-te Uniformes. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
