--- a/colegios.html
+++ b/colegios.html
@@ -37,7 +37,7 @@
             <div class="flex justify-between items-center py-4">
                 <!-- Logo + Texto -->
                 <div class="flex items-center space-x-4">
-                    <img src="images/IMG-20250407-WA0026.jpg" alt="Logo Per-te Uniformes" class="h-12 w-auto">
+                    <img src="images/logo de pe-rte uniformesb.png" alt="Logo Per-te Uniformes" class="h-20 w-auto">
                     <h1 class="text-2xl font-bold text-blue-600">Per-te Uniformes</h1>
                 </div>
                 <!-- Desktop Navigation -->
